chore: format code